--- a/Job Portal System/Areas/Resumes/Pages/Create.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Enums
-@model Job_Portal_System.Areas.Resumes.Pages.CreateModel
+@model CreateModel
 @{
     ViewData["Title"] = "Create Resume";
 }
