--- a/Job Portal System/Areas/Resumes/Pages/MyResume.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/MyResume.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Enums
-@model IndexModel
+@model MyResumeModel
 @{
     ViewData["Title"] = "Your Resume";
     var educationsEditsIndexer = 0;
