--- a/Job Portal System/Pages/Shared/_SidebarPartial.cshtml
+++ b/Job Portal System/Pages/Shared/_SidebarPartial.cshtml
@@ -1,16 +1,36 @@
+@{
+    var area = Html.ViewContext.RouteData.Values["area"] ?? Html.ViewContext.RouteData.Values["controller"];
+    string activeArea;
+    switch (area)
+    {
+        case "Companies":
+            activeArea = "companies";
+            break;
+        case "JobVacancies":
+            activeArea = "jobs";
+            break;
+        case "Resumes":
+            activeArea = "resumes";
+            break;
+        default:
+            activeArea = "handshake";
+            break;
+    }
+    var role = User.IsInRole("Administrator") ? "admin" :
+            User.IsInRole("Recruiter") ? "recruiter" :
+            User.IsInRole("JobSeeker") ? "jobSeeker" : "anonymous";
+}
+
 <div class="left-sidebar">
     <div class="left-sidebar--sticky">
         <nav>
             <ol class="nav-links">
                 <li>    </li>
                 <li>
-                    <a href="/" class="pl8 nav-links--link">Home</a>
-                </li>
-                <li>
                     <ol class="nav-links">
                         <li class="fs-fine tt-uppercase ml8 mt16 mb4 fc-light">Public</li>
-                        <li class="you-are-here">
-                            <a href="#" class="pl8 nav-links--link -link__with-icon">
+                        <li @(activeArea == "handshake" ? "class=you-are-here" : "")>
+                            <a href="/" class="pl8 nav-links--link -link__with-icon">
                                 <svg aria-hidden="true" class="svg-icon" width="18" height="18" viewBox="0 0 18 18">
                                     <path d="M9 1a8 8 0 1 0 0 16A8 8 0 0 0 9 1zM8 15.32a6.4 6.4 0 0 1-5.23-7.75L7 11.68v.8c0 .88.12 1.32 1 1.32v1.52zm5.72-2c-.2-.66-1-1.32-1.72-1.32h-1v-2c0-.44-.56-1-1-1H6V7h1c.44 0 1-.56 1-1V5h2c.88 0 1.4-.72 1.4-1.6v-.33a6.4 6.4 0 0 1 2.32 10.24v.01z"></path>
                                 </svg>
@@ -18,14 +38,30 @@
                                 <span class="-link--channel-name">Handshake</span>
                             </a>
                         </li>
-                        <li>
-                            <a id="nav-tags" href="#" class="nav-links--link">Tags</a>
+                        <li @(activeArea == "jobs" ? "class=you-are-here" : "")>
+                            <a id="nav-jobs" asp-controller="JobVacancies"
+                               asp-action="Index" class="nav-links--link">Jobs</a>
                         </li>
-                        <li>
-                            <a id="nav-users" href="#" class="nav-links--link">Users</a>
+                        <li @(activeArea == "resumes" ? "class=you-are-here" : "")>
+                            <a id="nav-resumes" asp-controller="Resumes"
+                               asp-action="Index" class="nav-links--link">Resumes</a>
                         </li>
-                        <li>
-                            <a id="nav-jobs" href="#" class="nav-links--link">Jobs</a>
+                        <li @(activeArea == "companies" ? "class=you-are-here" : "")>
+                            @switch (role)
+                            {
+                                case "admin":
+                                    <a id="nav-companies" href="#" class="nav-links--link">Companies</a>
+                                    break;
+                                case "recruiter":
+                                    <a id="nav-companies" href="#" class="nav-links--link">Companies</a>
+                                    break;
+                                case "jobSeeker":
+                                    <a id="nav-companies" href="#" class="nav-links--link">Companies</a>
+                                    break;
+                                default:
+                                    <a id="nav-companies" href="#" class="nav-links--link">Companies</a>
+                                    break;
+                            }
                         </li>
                     </ol>
                 </li>
