--- a/Job Portal System/Views/Resumes/ResumesSearchResult.cshtml
+++ b/Job Portal System/Views/Resumes/ResumesSearchResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model ViewModels.ResumesSearchResult
+﻿@model Job_Portal_System.ViewModels.Resumes.ResumesSearchResult
 
 @{
     ViewData["Title"] = $"Search results for {Model.Query}";
