--- a/Job Portal System/Pages/Shared/_Layout.cshtml
+++ b/Job Portal System/Pages/Shared/_Layout.cshtml
@@ -54,12 +54,6 @@
             @RenderBody()
         </div>
     </div>
-    @*<div class="container">
-            <partial name="_CookieConsentPartial" />
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>*@
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -70,6 +64,7 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/jquery-timeago/jquery-timeago.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
