--- a/Job Portal System/Pages/Shared/_LoginPartial.cshtml
+++ b/Job Portal System/Pages/Shared/_LoginPartial.cshtml
@@ -31,7 +31,7 @@
                                     <a class="btn-s" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="fa fa-user-cog"></i> Manage</a>
                                     <form class="form-inline ml-auto" asp-area="Identity" asp-page="/Account/Logout"
                                           asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-                                        <button type="submit" class="btn-s"><i class="fa fa-sign-out-alt"></i> Sign out</button>
+                                        <button type="submit" class="s-btn btn-s"><i class="fa fa-sign-out-alt"></i> Sign out</button>
                                     </form>
                                 </div>
                             </div>
