--- a/Job Portal System/Pages/Test.cshtml
+++ b/Job Portal System/Pages/Test.cshtml
@@ -1,127 +1,165 @@
 ﻿@page
-@model TestModel
-@{
-    Layout = "~/Pages/Shared/_WithSidebarLayout.cshtml";
-    ViewData["Title"] = "Test";
-}
 
-<div class="grid">
-    <h1 class="grid--cell fl1 fs-headline1">
-        Top Questions
-    </h1>
-    <div class="pl8 grid--cell">
-        <a href="#" class="ws-nowrap s-btn s-btn__primary">
-            Ask Question
-        </a>
-    </div>
-</div>
-<div class="grid ai-center mb16">
-    <div class="grid--cell fl1 fs-body3"></div>
-    <div class="grid--cell">
-        <div class="grid s-btn-group">
-            <a class="you-are-here is-selected grid--cell s-btn s-btn__muted s-btn__outlined"
-               href="?tab=interesting"
-               title="Title">
-                Interesting
-            </a>
-            <a class="grid--cell s-btn s-btn__muted s-btn__outlined"
-               href="?tab=featured"
-               title="Title">
-                Featured
-            </a>
+<div id="main-bar-full">
+    <div class="g-row cv-story-wrapper mt24">
+        <div class="g-col g-column cv-story">
+            <header>
+                <div class="ps-relative">
+                    <div class="grid">
+                        <div class="grid--cell fl1">
+                            <h1 class="mb2 fc-black-800 fs-headline1">We need a developer <i class="fs-body2 fc-black-500">(50 applicants)</i></h1>
+                        </div>
+
+                    </div>
+                    <div class="grid gs12 mb12">
+                        <div class="grid--cell4">
+                            <div class="grid ai-center gs8 mb4">
+                                <div class="grid--cell fc-black-400"><i class="fa fa-briefcase"></i></div>
+                                <div class="grid--cell fc-black-700 fs-body1">Frontend Developer</div>
+                            </div><div class="grid ai-center gs8 mb4">
+                                <div class="grid--cell fc-black-400">
+                                    <svg aria-hidden="true" class="svg-icon" width="18" height="18" viewBox="0 0 18 18">
+                                        <path d="M2 6.38C2 9.91 8.1 17.7 8.1 17.7c.22.29.58.29.8 0 0 0 6.1-7.8 6.1-11.32A6.44 6.44 0 0 0 8.5 0 6.44 6.44 0 0 0 2 6.38zm9.25.12a2.75 2.75 0 1 1-5.5 0 2.75 2.75 0 0 1 5.5 0z"></path>
+                                    </svg>
+                                </div>
+                                <div class="grid--cell fc-black-700 fs-body1">Damascus, Syria</div>
+                            </div>
+                            <div class="grid ai-center gs8 mb4" style="
+    display: none;
+">
+                                <div class="grid--cell fc-black-400">
+                                    <svg aria-hidden="true" class="svg-icon" width="18" height="18" viewBox="0 0 18 18">
+                                        <path d="M17.86 6.66l-1.77 1.77a10 10 0 0 0-14.14 0L.18 6.66a12.5 12.5 0 0 1 17.68 0zm-3.54 3.54l-1.76 1.77a5 5 0 0 0-7.07 0L3.72 10.2a7.5 7.5 0 0 1 10.6 0zm-3.53 3.54L9.02 15.5l-1.77-1.76a2.5 2.5 0 0 1 3.54 0z"></path>
+                                    </svg>
+                                </div>
+                                <div class="grid--cell fc-black-700 fs-body1">Remote </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <span class="ps-absolute pt2 r0 mr12 t15 s-badge s-badge__success">Open</span>
+
+                </div>
+            </header>
+            <section class="mt0 mb24">
+                <header class="grid mb16">
+                    <h2 class="fs-category has-border">Technologies</h2>
+                </header>
+                <article class="grid fd-column mb24">
+                    <div class="grid--cell mb8">
+                        <div class="fc-black-800 fs-body2">Preferred technologies</div>
+                    </div>
+                    <div class="grid grid--cell mb0">
+                        <div class="post-tag">javascript</div>
+                        <div class="post-tag">php</div>
+                        <div class="post-tag">artificial-intelligence</div>
+                        <div class="post-tag">jquery</div>
+                        <div class="post-tag">css</div>
+                        <div class="post-tag">c++</div>
+                        <div class="post-tag">java</div>
+                    </div>
+                </article>
+            </section>
+            <section class="mt0 mb24" id="cv-Experience">
+                <header class="grid mb16">
+                    <h2 class="fs-category has-border">
+                        Experience
+                    </h2>
+                </header>
+                <div class="">
+                    <article class="grid gs16" id="Experience-3753022">
+                        <div class="grid--cell">
+                            <div class="g-center cv-logo-blank">
+                                <svg aria-hidden="true" class="svg-icon" width="18" height="18" viewBox="0 0 18 18">
+                                    <path d="M10 16v-4H8v4H2V4c0-1.1.9-2 2-2h6a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8h-6zM4 4v2h2V4H4zm0 4v2h2V8H4zm4-4v2h2V4H8zm0 4v2h2V8H8zm-4 4v2h2v-2H4zm8 0v2h2v-2h-2zm0-4v2h2V8h-2z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="grid--cell fl1 fd-column">
+                            <h3 class="grid--cell mb2 fs-subheading fc-black-800">
+                                front-end developer
+                            </h3>
+                            <h4 class="grid--cell mb8 fs-body2 fc-black-500">Dnetto</h4>
+                            <div class="grid--cell mb8">
+                                <span class="fs-caption fc-black-700">2014 → Current</span>
+                                <span class="fs-caption fc-black-500">(5 years, 6 months)</span>
+                            </div>
+                            <div class="mb16">
+                                <div class="g-col g-row mt16">
+                                    <span class="post-tag">javascript</span>
+                                    <span class="post-tag">php</span>
+                                    <span class="post-tag">jquery</span>
+                                    <span class="post-tag">ajax</span>
+                                    <span class="post-tag">css</span>
+                                    <span class="post-tag">html</span>
+                                </div>
+                            </div>
+                            <div class="fs-body1 fc-black-700">
+                                <p>
+                                    I have good skills at managing projects and solving problems, I love learning new technologies.
+                                    Web development is my favorite.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <section class="mt0 mb24" id="cv-Education">
+                <header class="grid mb16">
+                    <h2 class="fs-category has-border">
+                        Education
+                    </h2>
+                </header>
+                <div class="">
+                    <article class="grid gs16" id="Education-3753120">
+                        <div class="grid--cell">
+                            <div class="g-center cv-logo">
+                                <img src="https://i.stack.imgur.com/zWAK8.png" role="img" class="cv-image" title="Damascus University">
+                            </div>
+                        </div>
+                        <div class="grid--cell fl1 fd-column">
+                            <h3 class="grid--cell mb2 fs-subheading fc-black-800">
+                                Information Technology Engineering
+                            </h3>
+                            <h4 class="grid--cell mb8 fs-body2 fc-black-500">Damascus University</h4>
+                            <div class="grid--cell mb8">
+                                <span class="fs-caption fc-black-700">Sep 2011 → Jul 2017</span>
+                            </div>
+                            <div class="mb16">
+                                <div class="g-col g-row mt16">
+                                    <span class="post-tag">algorithm</span>
+                                    <span class="post-tag">data-structures</span>
+                                    <span class="post-tag">pascal</span>
+                                    <span class="post-tag">c++</span>
+                                    <span class="post-tag">java</span>
+                                    <span class="post-tag">oop</span>
+                                    <span class="post-tag">automata</span>
+                                    <span class="post-tag">graphics</span>
+                                    <span class="post-tag">machine-learning</span>
+                                    <span class="post-tag">computer-vision</span>
+                                    <span class="post-tag">robotics</span>
+                                    <span class="post-tag">fuzzy-logic</span>
+                                    <span class="post-tag">data-mining</span>
+                                    <span class="post-tag">neural-network</span>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section>
         </div>
-    </div>
-</div>
-
-<div id="qlist-wrapper" class="flush-left">
-    <div id="question-mini-list">
-        <div>
-            <div class="question-summary narrow" id="question-summary-56647785">
-                <div onclick="window.location.href='/questions/56647785/docker-composer-node-js-give-error-when-running-the-docker-composer-mysql-er-n'" class="cp">
-                    <div class="votes">
-                        <div class="mini-counts"><span title="0 votes">0</span></div>
-                        <div>votes</div>
-                    </div>
-                    <div class="status unanswered">
-                        <div class="mini-counts"><span title="0 answers">0</span></div>
-                        <div>answers</div>
-                    </div>
-                    <div class="views">
-                        <div class="mini-counts"><span title="2 views">2</span></div>
-                        <div>views</div>
-                    </div>
-                </div>
-                <div class="summary">
-                    <h3>
-                        <a href="#" class="question-hyperlink">Title</a>
-                    </h3>
-                    <div class="tags">
-                        <a href="#" class="post-tag" title="Title" rel="tag">mysql</a>
-                        <a href="#" class="post-tag" title="Title" rel="tag">node.js</a>
-                    </div>
-                    <div class="started">
-                        <a href="#" class="started-link">asked <span title="2019-06-18 11:10:46Z" class="relativetime">1 min ago</span></a>
-                        <a href="#">muhammad ahmed</a> <span class="reputation-score" title="reputation score" dir="ltr">23</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="question-summary narrow" id="question-summary-56640925">
-                <div onclick="window.location.href='/questions/56640925/creating-a-label-which-disappears-after-a-few-seconds'" class="cp">
-                    <div class="votes">
-                        <div class="mini-counts"><span title="0 votes">0</span></div>
-                        <div>votes</div>
-                    </div>
-                    <div class="status answered">
-                        <div class="mini-counts"><span title="2 answers">2</span></div>
-                        <div>answers</div>
-                    </div>
-                    <div class="views">
-                        <div class="mini-counts"><span title="19 views">19</span></div>
-                        <div>views</div>
-                    </div>
-                </div>
-                <div class="summary">
-                    <h3>
-                        <a href="#" class="question-hyperlink">Title</a>
-                    </h3>
-                    <div class="tags">
-                        <a href="#" class="post-tag" title="Title'" rel="tag">powershell</a>
-                    </div>
-                    <div class="started">
-                        <a href="#" class="started-link">modified <span title="2019-06-18 11:10:41Z" class="relativetime">1 min ago</span></a>
-                        <a href="#">Ansgar Wiechers</a> <span class="reputation-score" title="reputation score 149,195" dir="ltr">149k</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="question-summary narrow tagged-interesting" id="question-summary-31374749">
-                <div onclick="window.location.href='/questions/31374749/opencv-svm-prediction-confidence-with-3-classes'" class="cp">
-                    <div class="votes">
-                        <div class="mini-counts"><span title="2 votes">2</span></div>
-                        <div>votes</div>
-                    </div>
-                    <div class="status answered-accepted">
-                        <div class="mini-counts"><span title="1 answer">1</span></div>
-                        <div>answer</div>
-                    </div>
-                    <div class="views">
-                        <div class="mini-counts"><span title="443 views">443</span></div>
-                        <div>views</div>
-                    </div>
-                </div>
-                <div class="summary">
-
-
-                    <h3><a href="#" class="question-hyperlink">Title</a></h3>
-                    <div class="tags">
-                        <a href="#" class="post-tag" title="Title" rel="tag">c++</a>
-                        <a href="#" class="post-tag" title="Title" rel="tag">opencv</a>
-                    </div>
-                    <div class="started">
-                        <a href="#" class="started-link">modified <span title="2019-06-18 11:10:24Z" class="relativetime">1 min ago</span></a>
-                        <a href="#">Cynichniy Bandera</a> <span class="reputation-score" title="reputation score " dir="ltr">4,891</span>
-                    </div>
+        <div class="g-col g-column timeline-sidebar">
+            <div class="timeline-sidebar-module">
+                <h3>Options</h3>
+                <a href="/users/jobsearch/3385804" class="btn block">Update your resume</a>
+                <a href="/users/story/pdf/3385804?View=Pdf" class="btn-secondary block">
+                    Save as PDF
+                </a>
+                <div class="text-centered fs-body3">
+                    <span class="privacy-helper has-tooltip">
+                        <i class="fa fa-lock icon"></i>Visibility: Private
+                    </span>
                 </div>
             </div>
         </div>
