--- a/Job Portal System/Views/JobVacancies/JobVacanciesIndex.cshtml
+++ b/Job Portal System/Views/JobVacancies/JobVacanciesIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model ViewModels.JobVacanciesIndexViewModel
+﻿@model Job_Portal_System.ViewModels.JobVacancies.JobVacanciesIndexViewModel
 
 @{
     ViewData["Title"] = "All Jobs";
@@ -47,58 +47,5 @@
 </div>
 
 <div id="qlist-wrapper" class="flush-left">
-    <div id="question-mini-list">
-        <div>
-            @foreach (var jobVacancy in Model.JobVacancies)
-            {
-                <div class="p12 pl30 bb ps-relative bc-black-2">
-                    <div>
-                        <div>
-                            <h2 class="fs-subheading job-details__spaced mb4">
-                                <a href="/JobVacancies/Details?id=@jobVacancy.Id" title="@jobVacancy.Title"
-                                   class="s-link">
-                                    @jobVacancy.Title
-                                </a>
-                            </h2>
-                            <span class="ps-absolute pt2 r0 fc-black-500 fs-body1 pr12 t15">@jobVacancy.CreatedAt</span>
-                        </div>
-                        <div class="fc-black-700 fs-body2">
-                            <span>
-                                @jobVacancy.Company
-                            </span>
-
-                            <span class="fc-black-500">
-                                -
-                                @if (jobVacancy.IsRemote)
-                                {
-                                    <i>No office location</i>
-                                }
-                                else
-                                {
-                                    @jobVacancy.Location
-                                }
-                            </span>
-                        </div>
-                        <div class="mt2 fs-body3">
-                            <span class="-salary pr16" title="£@jobVacancy.MinSalary - @jobVacancy.MaxSalary (Syrian Pounds)">£@jobVacancy.MinSalary - @jobVacancy.MaxSalary</span>
-                            @if (jobVacancy.IsRemote)
-                            {
-                                <span class="-remote pr16">Remote</span>
-                            }
-                            <span class="-relocation">@jobVacancy.JobTitle</span>
-                        </div>
-                        <div class="mt12">
-                            @foreach (var desiredSkill in jobVacancy.DesiredSkills)
-                            {
-                                <span href="/jobs/developer-jobs-using-git"
-                                      class="post-tag job-link no-tag-menu">
-                                    @desiredSkill
-                                </span>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
+    <partial name="_JobVacanciesGroupPartial" model="@Model.JobVacancies" />
 </div>
