--- a/Job Portal System/Views/JobVacancies/JobVacanciesSearchResult.cshtml
+++ b/Job Portal System/Views/JobVacancies/JobVacanciesSearchResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model ViewModels.JobVacanciesSearchResult
+﻿@model Job_Portal_System.ViewModels.JobVacancies.JobVacanciesSearchResult
 
 @{
     ViewData["Title"] = $"Search results for {Model.Query}";
