--- a/Job Portal System/Views/Resumes/ResumesIndex.cshtml
+++ b/Job Portal System/Views/Resumes/ResumesIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model ViewModels.ResumesIndexViewModel
+﻿@model Job_Portal_System.ViewModels.Resumes.ResumesIndexViewModel
 
 @{
     ViewData["Title"] = "All Resumes";
@@ -49,44 +49,5 @@
 </div>
 
 <div id="qlist-wrapper" class="flush-left">
-    <div id="question-mini-list">
-        <div>
-            @foreach (var resume in Model.Resumes)
-            {
-                <div class="question-summary narrow">
-                    <div onclick="window.location.href = '/resumes/details?id=@resume.Id'" class="cp">
-                        <div class="status">
-                            <div class="mini-counts"><span title="@resume.WorksCount experiences">@resume.WorksCount</span></div>
-                            <div>experiences</div>
-                        </div>
-                        <div class="status">
-                            <div class="mini-counts"><span title="@resume.SkillsCount skills">@resume.SkillsCount</span></div>
-                            <div>skills</div>
-                        </div>
-                        <div class="status">
-                            <div class="mini-counts"><span title="@resume.EducationsCount educations">@resume.EducationsCount</span></div>
-                            <div>educations</div>
-                        </div>
-                    </div>
-                    <div class="summary">
-                        <h3>
-                            <a href="/Resumes/Details?id=@resume.Id" class="question-hyperlink">
-                                @resume.OwnerName
-                            </a>
-                        </h3>
-                        <div class="tags">
-                            @foreach (var jobTitle in resume.SeekedJobTitles)
-                            {
-                                <span class="post-tag" title="@jobTitle">@jobTitle</span>
-                            }
-                        </div>
-                        <div class="started">
-                            <span class="started-link">@(resume.IsModified ? "updated" : "created")<span title="@resume.LastUpdate" class="relativetime">@resume.LastUpdate</span></span>
-                            <span class="started-link fw-b"><i class="fa fa-map-marker-alt"></i> @resume.Location</span>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
+    <partial name="_ResumesGroupPartial" model="@Model.Resumes" />
 </div>
