--- a/Job Portal System/Views/Resumes/ResumeDetails.cshtml
+++ b/Job Portal System/Views/Resumes/ResumeDetails.cshtml
@@ -48,7 +48,7 @@
                     </div>
                     <div class="grid--cell8">
                         <div class="grid gs8 mb0">
-                            <div class="grid grid--cell6 grid__fl1 gs8 mb12">
+                            <div class="grid grid--cell6 gs8">
                                 <div class="grid--cell">
                                     <div class="s-avatar s-avatar__md bar-circle bg-black-200">
                                         <div class="s-avatar--letter" style="line-height: 34px;">@(Model.Resume.IsSeeking ? "A" : "P")</div>
