--- a/Job Portal System/Views/JobVacancies/JobVacanciesIndex.cshtml
+++ b/Job Portal System/Views/JobVacancies/JobVacanciesIndex.cshtml
@@ -11,14 +11,32 @@
     </h1>
     @if (Model.IsRecruiter)
     {
-    <div class="pl8 grid--cell">
-        <a href="/JobVacancies/Create"
-           class="ws-nowrap s-btn s-btn__primary">
-            Add Job Vacancy
-        </a>
-    </div>
+        <div class="pl8 grid--cell">
+            <a href="/JobVacancies/Create"
+               class="ws-nowrap s-btn s-btn__primary">
+                Add Job Vacancy
+            </a>
+        </div>
     }
 </div>
+
+<form asp-controller="JobVacancies" asp-action="Index" class="mb12" id="job-search-form" method="get">
+    <div class="ps-relative">
+        <div class="grid--cell11 input-group">
+            <input type="text" name="q" value="@Model.Query" placeholder="Search all jobs" maxlength="120" style="width: 100%;" class="f-input">
+            <input type="hidden" name="tab" value="@Model.ActiveTab">
+        </div>
+        <div class="ps-absolute t0 r0">
+            <div>
+                <button class="s-btn s-btn__merged s-btn__primary">
+                    <svg aria-hidden="true" class="svg-icon" width="18" height="18" viewBox="0 0 18 18">
+                        <path d="M18 16.5l-5.14-5.18h-.35a7 7 0 1 0-1.19 1.19v.35L16.5 18l1.5-1.5zM12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0z"></path>
+                    </svg> 
+                </button>
+            </div>
+        </div>
+    </div>  
+</form>
 
 <div class="grid ai-center mb16">
     <div class="grid--cell fl1 fs-body3"></div>
@@ -47,5 +65,8 @@
 </div>
 
 <div id="qlist-wrapper" class="flush-left">
-    <partial name="_JobVacanciesGroupPartial" model="@Model.JobVacancies" />
+    <div class="bb bc-black-2 pl16 py8">
+        <i class="fc-black-500 fs-body3">@Model.Count results</i>
+    </div>
+    <partial name="_JobVacanciesGroupPartial" model="@Model.JobVacancies"/>
 </div>
