--- a/Job Portal System/Views/Shared/_QualificationsGroupPartial.cshtml
+++ b/Job Portal System/Views/Shared/_QualificationsGroupPartial.cshtml
@@ -8,7 +8,7 @@
             @qualification.Title (@qualification.Type @qualification.Years @(qualification.Years == 1 ? "year" : "years"))
             @if (qualification.IsWeakness)
             {
-                <strong class="pl8 fc-danger">Weak</strong>
+                <span class="ml8 s-badge s-badge__danger">Weak</span>
             }
         </li>
     }
